fixed unecessary gap in css

--- a/index.css
+++ b/index.css
@@ -29,7 +29,7 @@ body{
   width: 100%;
   height: 100%;
   object-fit: cover;
-  max-width: 100%;
+  /*max-width :100%;*/
 }
 .card-content{
   flex: 1.2;
@@ -124,14 +124,17 @@ body{
     flex-direction: column;
     max-width: 90%;
     border-radius: 10px;
+    overflow: hidden;
   }
   .card-image{
     width: 100%;
     height: auto;
+    flex: none;
   }
   .card-image img{
     width: 100%;
     height: auto;
+    display: block;
   }
   .card-content{
     padding: 1.8rem;
